# preprocessing_extraction

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: auto_segmenter_main.cpp  cell_extraction_main.cpp  draw_wkt.cpp  frame_extractor_main.cpp  segmenter_main.cpp  simplifier_main.cpp  warp_main.cpp
